--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,3 +77,27 @@ footer div {
 footer a {
     color: #024e76;
 }
+
+section {
+    padding: 60px;
+}
+
+/* Hero Style Start */
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+}
+/* Hero Style End */
+
+/* div style for hero-form */
+.hero-form {
+    color: #024e76;
+    background-color: #fce138;
+    width: 500px;
+    padding: 20px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #024e76;
+}
