--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,7 @@ section {
     height: 600px;
     background-size: cover;
     background-position: center;
+    position: relative;
 }
 /* Hero Style End */
 
@@ -100,4 +101,8 @@ section {
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
+    /* add position format to hero-form */
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
 }
