--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@ section {
     margin: 5px 0 15px 0;
 }
 
+/* adding style to input field */
 .form-input {
     border: 1px solid #024e76;
     display: block;
@@ -130,4 +131,17 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+}
+
+.hero-form label {
+    margin: 0 5px;
+}
+
+/* adding style to the button */
+.hero-form button {
+    background-color: #024e76;
+    color: #fce138;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
 }
