--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,7 @@ section {
 
   .section-title {
     font-size: 55px;
+    display: inline-block;
     color: #024e76;
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
@@ -266,4 +267,45 @@ section {
 .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
+}
+
+/* Reach Out Styles */
+.contact {
+    background-color: #024e76;
+    text-align: center;
+}
+
+.contact h2 {
+    color: #fce138;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+/* vertical-align lift the content to the top iwith the text-align left */
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
+
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height:  1.5;
+    font-size: 20px 0;
+    font-style: normal;
+}
+
+.contact-info a {
+    color:#fce138;
 }
