--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,9 +98,7 @@ section {
     background-color: #fce138;
     width: 500px;
     padding: 20px;
-    border-style: solid;
-    border-width: 3px;
-    border-color: #024e76;
+    border: 3px solid #024e76;
     /* add position format to hero-form */
     position: absolute;
     bottom: 120px;
@@ -151,24 +149,12 @@ section {
     text-align: center;
 }
 
-/*
-.intro h2 {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #fce138;
-    display: inline-block;
-} 
-*/
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20 px;
-    margin: auto 0;
+    margin: 0 auto;
 }
 
 .steps {
@@ -230,7 +216,6 @@ section {
     margin: 0 auto 30px auto;
     background: #024e76;  
     color: #fce138;  
-    margin: 0 auto 30px auto;
     overflow: auto;
 }
 
