--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,16 +42,26 @@ header nav {
     margin: 7px 0;
 }
 
-/* apply style to the navigation list property */
+/* apply style to the navigation list property.
+Now remove for flexbox.
 header nav ul li {
     display: inline;
+} */
+
+/* Add rules for flexbox */
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
 }
 
 /* apply style to the naviation list link */
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22 px;
+    font-size: 1.55vw;
 }
 
 /* apply style to the footer section */
