--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,9 @@ header nav ul li a {
 
 /* apply style to the footer section */
 footer {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     background: #fce138;
     width: 100;
     padding: 40px 35px;
@@ -73,7 +76,6 @@ footer {
 
 /* apply style to the left <h2> of the footer */
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
@@ -81,7 +83,6 @@ footer h2 {
 
 /* apply style to the right <div> of the footer */
 footer div {
-    float:right;
     line-height: 1.5;
     text-align: right;
 }
@@ -97,25 +98,39 @@ section {
 
 /* Hero Style Start */
 .hero {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     background-image: url("../images/hero-bg.jpg");
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
 }
 /* Hero Style End */
+
+/* Adding hero-cta class style and hero-cta h2 */
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+}
 
 /* div style for hero-form */
 .hero-form {
     color: #024e76;
     background-color: #fce138;
-    width: 500px;
     padding: 20px;
     border: 3px solid #024e76;
-    /* add position format to hero-form */
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    width: 40%;
+    margin: 3.5%;
 }
 
 /* layout and styling for form */
