--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,21 +172,16 @@ section {
     font-size: 16px;
 }
 
-/* styling the first section class */
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20 px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -217,12 +212,13 @@ section {
 
   .section-title {
     font-size: 55px;
-    display: inline-block;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin:0 auto 35px auto;
+    width: 50%;
   }
   
   .primary-border {
@@ -231,11 +227,6 @@ section {
   
   .secondary-border {
     border-color: #39a6b2;
-  }
-
-  /* class in the section portion */
-  .trainers {
-      text-align: center;
   }
   
 /* class in the article portion */
@@ -285,7 +276,6 @@ section {
 /* Reach Out Styles */
 .contact {
     background-color: #024e76;
-    text-align: center;
 }
 
 .contact h2 {
@@ -321,4 +311,8 @@ section {
 
 .contact-info a {
     color:#fce138;
+}
+
+.flex-row {
+    display: flex;
 }
