--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ section {
 .hero-form {
     color: #024e76;
     background-color: #fce138;
-    width: 500px;
+    width: 100%;
     padding: 20px;
     border: 3px solid #024e76;
     /* add position format to hero-form */
@@ -109,6 +109,8 @@ section {
 
 .hero-cta {
     line-height: 1.2;
+    width: 100%;
+    text-align: center;
 }
 
 /* layout and styling for form */
@@ -120,10 +122,6 @@ section {
 .hero-form h3 {
     font-size: 24px;
     margin: 0;
-}
-
-.hero-form p {
-    margin: 5px 0 15px 0;
 }
 
 /* adding style to input field */
@@ -201,6 +199,7 @@ section {
     padding: 0 100px 20px 100px;
     display: inline-block;
     border-bottom: 3px solid;
+    width: 80%;
   }
   
   .primary-border {
@@ -223,6 +222,7 @@ section {
     background: #024e76;  
     color: #fce138;  
     overflow: auto;
+    flex: 0 70%;
 }
 
 .trainer img {
@@ -271,8 +271,7 @@ section {
 }
 
 .contact-info iframe {
-    width: 400px;
-    height: 400px;
+    flex: 1 100%;
 }
 
 /* vertical-align lift the content to the top iwith the text-align left */
@@ -314,25 +313,39 @@ section {
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
-    header h1 a {
-      /* this will be applied on any screen smaller than 980px */
-      color: tomato;
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+    }
+
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    header nav ul {
+        margin-top: 20px;
+        width: 100;
+        justify-content: center;
+    }
+    
+    header nav ul li a {
+        font-size: 20px;
+    }
+
+    footer h2, footer div {
+        text-align: center;
+        width: 100%;
     }
   }
   
   /* MEDIA QUERY FOR TABLETS AND SMALLER */
   @media screen and (max-width: 768px) {
-    header h1 {
-      /* this will be applied on any screen between 768px and 575px */
-      font-size: 80px;
-    }
+ 
   }
   
   /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
   @media screen and (max-width: 575px) {
-    header h1 {
-      /* this will be applied on any screen smaller than 575px */
-      font-size: 100px;
-    }
+ 
   }
   
