--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,8 @@ header nav ul {
 
 /* apply style to the naviation list link */
 header nav ul li a {
-    margin: 0 30px;
+    /*margin: 0 30px;*/
+    margin: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -96,15 +97,17 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
+    width: 100%;
 }
 
 .hero-cta {
-    width: 35%;
-    text-align: right;
+    width: 100%;
+    text-align: center;
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
  }
   
  .hero-cta h2 {
@@ -228,13 +231,13 @@ section {
   }
 
   .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
     margin: 0 auto 35px auto;
-    width: 50%;
+    width: 80%;
   }
   
   
@@ -261,7 +264,7 @@ section {
     margin: 20px;
     background: #024e76;  
     color: #fce138;
-    flex: 1;  
+    flex: 0 70%;  
 }
 
 .trainer img {
@@ -306,7 +309,8 @@ section {
 }
 
 .contact-info iframe {
-    height: 400px;    
+    height: 400px; 
+    flex: 1 100%;   
 }
 
 /* vertical-align lift the content to the top iwith the text-align left */
@@ -366,24 +370,13 @@ section {
       display: flex;
   }
 
-/*
-@media screen and (max-width: 900px) {
-    a {
-        color: aquamarine;
-    }
-
-    h1{
-        font-size: 200px;
-    }
-} */
-
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
     header {
         padding-bottom: 0;
         justify-content: center;
-    }
-
+    }  
+    
     header h1 {
         width: 100%;
         text-align: center;
@@ -391,27 +384,69 @@ section {
 
     header nav ul {
         margin-top: 20px;
-        width: 100;
+        width: 100%;
         justify-content: center;
     }
-    
+
     header nav ul li a {
         font-size: 20px;
     }
 
-    footer h2, footer div {
+    footer h2, f
+}
+  
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+    section {
+        padding: 30px 15px;
+    }
+
+    .step h3 {
+        flex: 1 100%;
         text-align: center;
+    }
+
+    .step-info {
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .step-img {
+        flex: 0 32%;
+        margin-right: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    } 
+    
+    .step-text {
+        flex: 100%;
+    }
+}
+  
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+    .hero-form button {
         width: 100%;
     }
-  }
-  
-  /* MEDIA QUERY FOR TABLETS AND SMALLER */
-  @media screen and (max-width: 768px) {
- 
-  }
-  
-  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-  @media screen and (max-width: 575px) {
- 
-  }
-  
+
+    .section-title {
+        width: 95%;
+    }
+
+    .intro p {
+        width: 100%;
+    }
+
+    .trainer {
+        flex: 0 100%;
+    }
+
+    .contact-info {
+        text-align: center;
+    }
+
+   .contact-form {
+        order: 3;
+    }
+}
