--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 /* apply style to the link in the header section */
@@ -55,6 +56,8 @@ header nav ul li a {
     margin: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
 }
 
 /* apply style to the footer section */
@@ -114,6 +117,7 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  }
 
 /* div style for hero-form */
@@ -124,6 +128,7 @@ section {
     border: 3px solid #024e76;
     width: 40%;
     margin: 3.5%;
+    border-radius: 15px;
 }
 
 /* layout and styling for form */
@@ -146,6 +151,7 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
 }
 
 .hero-form label {
@@ -159,6 +165,8 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
+
 }
 
 /* styling the first section class 
@@ -354,6 +362,7 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
   }
   
  .contact-form button {
@@ -364,6 +373,7 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
   }
 
   .flex-row {
