--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,14 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 /*apply style to the h1 in header section */
@@ -102,6 +110,8 @@ section {
     flex-wrap: wrap;
     align-items: flex-start;
     width: 100%;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 .hero-cta {
@@ -385,6 +395,7 @@ section {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }  
     
     header h1 {
