--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ header {
     background-position: center;
     background-attachment: fixed;
     background-position: 80%;
+    z-index: 9999;
 }
 
 /*apply style to the h1 in header section */
@@ -424,6 +425,67 @@ section {
   .flex-row {
       display: flex;
   }
+
+/*css portion for the wrapper */
+.checkbox-wrapper input, .radio-wrapper input {
+    opacity: 0;
+ }
+
+ .checkbox-wrapper label, .radio-wrapper label {
+     position: relative;
+     left: 10px;
+     margin: 10px;
+     line-height: 1.6;
+ }
+
+ .checkbox-wrapper label::before, .radio-wrapper label::before {
+     content: '';
+     height: 20px;
+     width: 20px;
+     background: rgba(255,255,255, 0.75);
+     border: 1px solid #024e76;
+     position: absolute;
+     top: -4px;
+     left: -30px;
+ }
+
+ /* making the button round and not square */
+ .radio-wrapper label::before {
+    border-radius: 50%;
+  }
+
+  /* how the button display about they are checked */
+  .radio-wrapper label::after {
+    content: "";
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #024e76;
+    position: absolute;
+    left: -29px;
+    top: -3px;
+    /* changing the buttons to a gradient and not solid */
+    background-image: radial-gradient(circle, #39a6b2, #024e76);
+
+  }
+  
+  .checkbox-wrapper label::after {
+    content: "";
+    height: 6px;
+    width: 14px;
+    border-left: 2px solid #024e76;
+    border-bottom: 2px solid #024e76;
+    position: absolute;
+    left: -26px;
+    top: 1px;
+    /* change the check mark rotation */
+    transform: rotate(-58deg);
+  }
+
+.checkbox-wrapper input:checked + label,
+.radio-wrapper input:checked + label {
+  font-weight: bold;
+}
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
