final css touches

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+  }
 /* default magin and padding */
 * {
     margin: 0;
@@ -8,14 +13,14 @@
 /* apply styles to the <body> section */
 body {
     /* more alphanuerical value */
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-seif;
 }
 
 /* apply style to <header> section */
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -34,7 +39,7 @@ header {
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -42,7 +47,7 @@ header h1 {
 /* apply style to the link in the header section */
 header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 /* apply style to navigation link */
@@ -71,28 +76,28 @@ header nav ul li a {
 
 /* pseduo-class navigation bar */
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
 }
  
 /* pseduo-class the "get running" button */
 .hero-form button:hover {
-    background-color: #39a6b2;  
+    background-color: var(--tertiary-color);  
 }
   
 /* pseduo-class the submit buttons */
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 
 
 
 /* apply style to the footer section */
 footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -102,7 +107,7 @@ footer {
 
 /* apply style to the left <h2> of the footer */
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -115,7 +120,7 @@ footer div {
 
 /* apply style to the link in the footer <a> */
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 section {
@@ -148,16 +153,16 @@ section {
  .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  }
 
 /* div style for hero-form */
 .hero-form {
-    color: #024e76;
-    background-color: #fce138;
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
     padding: 20px;
-    border: 3px solid #024e76;
+    border: 3px solid var(--secondary-color);
     width: 40%;
     margin: 3.5%;
     border-radius: 15px;
@@ -176,11 +181,11 @@ section {
 
 /* adding style to input field */
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
@@ -202,8 +207,8 @@ section {
 
 /* adding style to the button */
 .hero-form button {
-    background-color: #024e76;
-    color: #fce138;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -218,7 +223,7 @@ section {
 
 .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20 px;
     margin: 0 auto;
@@ -238,7 +243,7 @@ section {
   /* general clean-up */
   
  .steps {
-     background-color: #fce138;
+     background-color: var(--primary-color);
      text-align: center;
   } 
   
@@ -263,29 +268,29 @@ section {
 }
   
 .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
 }
      
 .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
   }
 
  .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
   }
 
   .step:last-child {
-      border-bottom: 1px solid #39a6b2;
+      border-bottom: 1px solid var(--tertiary-color);
   }
 
   .section-title {
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -295,11 +300,11 @@ section {
   
   
   .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
   }
   
   .secondary-border {
-    border-color: #39a6b2;
+    border-color: var(--tertiary-color);
   }
 
 /* class in the article portion */
@@ -315,8 +320,8 @@ section {
 /* class in the article portion */
 .trainer {
     margin: 20px;
-    background: #024e76;  
-    color: #fce138;
+    background: var(--secondary-color);  
+    color: var(--primary-color);
     flex: 0 70%;  
 }
 
@@ -354,11 +359,11 @@ section {
 
 /* Reach Out Styles */
 .contact {
-    background-color: #024e76;
+    background-color: var(--secondary-color);
 }
 
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .contact-info iframe {
@@ -379,7 +384,7 @@ section {
 }
 
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
 
@@ -395,15 +400,15 @@ section {
 }
 
 .contact-info a {
-    color:#fce138;
+    color:var(--primary-color);
 }
 
 .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
@@ -414,8 +419,8 @@ section {
  .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
@@ -443,7 +448,7 @@ section {
      height: 20px;
      width: 20px;
      background: rgba(255,255,255, 0.75);
-     border: 1px solid #024e76;
+     border: 1px solid var(--secondary-color);
      position: absolute;
      top: -4px;
      left: -30px;
@@ -460,12 +465,12 @@ section {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #024e76;
+    background: var(--secondary-color);
     position: absolute;
     left: -29px;
     top: -3px;
     /* changing the buttons to a gradient and not solid */
-    background-image: radial-gradient(circle, #39a6b2, #024e76);
+    background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
 
   }
   
@@ -473,8 +478,8 @@ section {
     content: "";
     height: 6px;
     width: 14px;
-    border-left: 2px solid #024e76;
-    border-bottom: 2px solid #024e76;
+    border-left: 2px solid var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
     position: absolute;
     left: -26px;
     top: 1px;
@@ -486,6 +491,8 @@ section {
 .radio-wrapper input:checked + label {
   font-weight: bold;
 }
+
+
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
