--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -6,13 +6,13 @@
 }
 
 .page-title {
-    color: #fce138;
+    color: var(--primary-color);
 }
 
 .page-title h2 {
     display: inline;
     border-bottom: 4px solid;
-    border-color: #fce138;
+    border-color: var(--primary-color);
     padding: 0 80px 15px 80px;
     font-weight: normal;
     font-size: 42px;
@@ -22,7 +22,7 @@
 .secondary-content {
     width: 80%;
     margin: 0 auto;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 .secondary-content h3 {
